# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  spec.yml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml  schedule-audit.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20220406131206_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscription_confirm.rs  subscriptions.rs
