[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linked=clang", "-C", "link-arg=-fuse-ld=lld"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
reqwest = "0.11.10"
