[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linked=clang", "-C", "link-arg=-fuse-ld=lld"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
config = "0.11.0"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
tracing = { version = "0.1.32", features = ["log"] }
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
once_cell = "1.10.0"
reqwest = "0.11.10"
